# Lesson_6_Django_Basics

./: catalog.html  category.html  contacts.html  home.html  pyproject.toml
src/: web.py
