[project]
name = "lesson-6-django-basics"
version = "0.1.0"
description = ""
authors = [
    {name = "lobanov",email = "lav1986@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"
pytest-cov = "^6.1.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
pytest = "^8.3.5"